gtk/gtksidebarrow.c
@@ -266,15 +266,10 @@ gtk_sidebar_row_set_property (GObject      *object,
       break;
 
     case PROP_CLOUD_PROVIDER:
-      {
 #ifdef HAVE_CLOUDPROVIDERS
-        gpointer *object;
-        object = g_value_get_object (value);
-        if (IS_CLOUD_PROVIDER_ACCOUNT(object))
-          self->cloud_provider = g_object_ref (object);
+      g_set_object (&self->cloud_provider, g_value_get_object (value));
 #endif
-        break;
-      }
+      break;
 
     case PROP_PLACEHOLDER:
       {
@@ -296,6 +291,7 @@ gtk_sidebar_row_set_property (GObject      *object,
             g_clear_object (&self->drive);
             g_clear_object (&self->volume);
             g_clear_object (&self->mount);
+            g_clear_object (&self->cloud_provider);
 
             gtk_container_foreach (GTK_CONTAINER (self),
                                    (GtkCallback) gtk_widget_destroy,
@@ -402,6 +398,7 @@ gtk_sidebar_row_finalize (GObject *object)
   g_clear_object (&self->drive);
   g_clear_object (&self->volume);
   g_clear_object (&self->mount);
+  g_clear_object (&self->cloud_provider);
 
   G_OBJECT_CLASS (gtk_sidebar_row_parent_class)->finalize (object);
 }
